# rust-sentence-transformers

./: Cargo.toml  README.md
examples/: bert-base-nli-stsb-mean-tokens.rs
src/: lib.rs
src/model/: bert.rs  mod.rs  pooling.rs  sentence_tranformer.rs
