[package]
name = "rust-sentence-transformers"
version = "0.1.0"
authors = ["mladvladimir <mlad.vladimir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_sentence_transformers"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
rust-bert = "0.6.2"
rust_tokenizers = "2.0.4"
tch = "0.1.6"
serde_json = "1.0.45"
serde = {version = "1.0.104", features = ["derive"]}
failure = "0.1.6"
log = "0.4.8"
dirs = "2.0.2"

